
- orm
    - Adjustments to the enhanced garbage collection on 
      InstanceState to better guard against errors due 
      to lost state.

    - Query.get() returns a more informative
      error message when executed against multiple entities.
      [ticket:1220]

    - Restored NotImplementedError on Cls.relation.in_()
      [ticket:1140] [ticket:1221]
      
- sql
    - Removed the 'properties' attribute of the 
      Connection object, Connection.info should be used.
    
    - Restored "active rowcount" fetch before ResultProxy
      autocloses the cursor.  This was removed in 0.5rc3.
    
    - Rearranged the `load_dialect_impl()` method in 
      `TypeDecorator` such that it will take effect
      even if the user-defined `TypeDecorator` uses
      another `TypeDecorator` as its impl.
      
- access
    - Added support for Currency type.

    - Functions were not return their result. [ticket:1017]

    - Corrected problem with joins. Access only support 
      LEFT OUTER or INNER not just JOIN by itself. 
      [ticket:1017]

- mssql
    - Lots of cleanup and fixes to correct problems with
      limit and offset.

    - Correct situation where subqueries as part of a
      binary expression need to be translated to use the
      IN and NOT IN syntax.

    - Fixed E Notation issue that prevented the ability to
      insert decimal values less than 1E-6. [ticket:1216]

    - Corrected problems with reflection when dealing with
      schemas, particularly when those schemas are the
      default schema. [ticket:1217]

    - Corrected problem with casting a zero length item to
      a varchar. It now correctly adjusts the CAST.

- ext
    - Can now use a custom "inherit_condition" in 
      __mapper_args__ when using declarative.
      
0.5.0rc3
========
- features
- orm
    - Added two new hooks to SessionExtension:
      after_bulk_delete() and after_bulk_update().
      after_bulk_delete() is called after a bulk delete()